# bluetooth-exercise-bike

ftms-simulator-qt/: CMakeLists.txt  fitnessmachineservice.cpp  fitnessmachineservice.h  ftmssimulator.cpp  ftmssimulator.h  main.cpp
